--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,19 @@
-<h1 class="text-center mb-3">{{title}}</h1>
-<h2>{{subtitle}}</h2>
+<h1 class="text-center mb-3">Savage Ipsum</h1>
+<h2>Ohhhh yeeeeah!!!</h2>
 
 <a href="#">Github</a>
 <form action="/api/generate">
     <label for="paragraphs">Paragraphs:</label>
-    <input name="paragraphs" type="number" min="0" max="25" placeholder="1-25">
+    <input name="paragraphs" type="number" min="1" max="25" placeholder="1-25">
     <button type="submit" value="generate">Dig it!</button>
 </form>
+
+{{#if paragraphs}}
 <div class="result">
     <h3>Bonesaw is ready!</h3>
+    {{#each paragraphs}}
+        <p>{{paragraph}}</p>
+    {{/each}}
 </div>
+{{/if}}
 
