--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31167,6 +31167,11 @@ video {
           animation: bounce 1s infinite;
 }
 
+.github-img {
+  height: 24px;
+  width: 24px;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
