--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <title>Savage Ipsum</title>
 </head>
-<body>
+<body class="min-h-screen w-screen bg-black text-white">
     {{{body}}}
 </body>
 </html>
