--- a/public/css/style.tailwind.css
+++ b/public/css/style.tailwind.css
@@ -6,3 +6,15 @@
     height: 24px;
     width: 24px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
