--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/style.css" rel="stylesheet">
     <title>Savage Ipsum</title>
+    {{!-- Google Fonts --}}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<body class="min-h-screen w-screen bg-black text-white">
+<body class="min-h-screen w-screen bg-black text-white font-sans-alt">
     {{{body}}}
 </body>
 </html>
