--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body class="min-h-screen w-screen bg-black text-white font-sans-alt">
+    {{>header}}
     {{{body}}}
 </body>
 </html>
