--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<body class="min-h-screen w-screen bg-black text-white font-sans-alt">
+<body class="min-h-screen w-screen box-border overflow-x-hidden bg-black text-white font-sans-alt">
     {{>header}}
     {{{body}}}
 </body>
