--- a/public/css/style.tailwind.css
+++ b/public/css/style.tailwind.css
@@ -7,6 +7,8 @@
     width: 24px;
 }
 
+
+/*** NUMBER INPUT ***/
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -17,4 +19,26 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+/*** SCROLLBAR ***/
+/* width */
+::-webkit-scrollbar {
+  @apply w-5;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  @apply rounded-2xl;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-2xl;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gradient-to-br from-pink-600 via-red-600 to-yellow-600 rounded-2xl;
 }
