--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
-<header class="flex justify-between items-center py-4 px-8">
+<header class="flex justify-between items-center py-4 px-8 tracking-wider">
     <div>
-        <h1 class="text-5xl font-marker">Savage Ipsum</h1>
-        {{!-- <h2 class="text-3xl font-marker">Ohhhh yeeeeah!!!</h2> --}}
+        <h1 class="text-5xl font-marker text-pink-500">Savage Ipsum</h1>
+        <h2 class="text-2xl font-marker text-purple-500">Ohhhh yeeeeah!!!</h2>
     </div>
     <a href="https://github.com/jpottruff/savage-ipsum" target="_blank"><img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="github-img"></a>
 </header>
