--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -4,6 +4,6 @@
         <a href="/" class="ml-4 bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-full h-8 w-8 flex items-center justify-center font-marker hover:text-black">X</a>
     </div>
     {{#each paragraphs}}
-        <p class="my-2 max-w-md">{{paragraph}}</p>
+        <p class="my-2 max-w-md tracking-normal leading-normal">{{paragraph}}</p>
     {{/each}}
 </div>
