--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <link href="/css/style.css" rel="stylesheet">
     <title>Savage Ipsum</title>
     {{!-- Google Fonts --}}
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
 </head>
+
 <body class="min-h-screen w-screen box-border overflow-x-hidden bg-black text-white font-sans-alt">
     {{>header}}
     {{{body}}}
 </body>
+
 </html>
