--- a/public/css/style.tailwind.css
+++ b/public/css/style.tailwind.css
@@ -2,11 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.github-img {
-    height: 24px;
-    width: 24px;
+.logo {
+  height: 125px;
+  width: 125px;
 }
 
+.github-img {
+  height: 24px;
+  width: 24px;
+}
 
 /*** NUMBER INPUT ***/
 /* Chrome, Safari, Edge, Opera */
@@ -17,7 +21,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 
@@ -29,10 +33,10 @@ input[type=number] {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px grey;
   @apply rounded-2xl;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
   @apply bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-2xl;
