add image attribution

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,9 @@
 <header class="flex justify-between items-center py-4 px-8 tracking-wider">
     <div class="flex">
-        <img src="/images/machoman-vanorton-childhoodmemoriesicons-behance.png" alt="asdads" class="logo" />
+        <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
+            src="/images/machoman-vanorton-childhoodmemoriesicons-behance.png"
+            title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
+            class="logo" />
         <div class="ml-4 flex flex-col justify-center font-marker">
             <h1 class="my-1 text-5xl text-pink-500">Savage Ipsum</h1>
             <h2 class="my-1.5 text-3xl text-purple-500">Ohhhh yeeeeah!!!</h2>
