--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,13 @@
 <form action="/api/generate" class="flex flex-col items-center py-4 px-10">
-    <div class="flex-initial my-2">
+    <div class="flex-initial my-4">
         <label for="paragraphs" class="text-xl">Paragraphs:</label>
         {{!-- <input name="paragraphs" type="text" placeholder="1-25" class="text-black ml-2 pl-4 pr-1 rounded"> --}}
-        <input name="paragraphs" type="number" min="1" max="25" placeholder="1-25" class="text-black ml-2 pl-4 pr-1 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 focus:border-transparent">
+        <input name="paragraphs" type="number" min="1" max="25" placeholder="1-25"
+            class="text-black ml-2 pl-4 pr-1 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 focus:border-transparent">
     </div>
-    <div class="flex-initial my-2">
-        <button type="submit" value="generate" class="bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 py-2 px-4 rounded font-marker hover:text-black tracking-wider">Dig it!</button>
+    <div class="flex-initial my-4">
+        <button type="submit" value="generate"
+            class="bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 py-2 px-4 rounded font-marker hover:text-black tracking-wider">Dig
+            it!</button>
     </div>
 </form>
-
