--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,10 +1,10 @@
 <div class="result flex flex-col items-center py-2 px-10">
-    <div class="flex items-center mb-4">
+    <div class="flex items-center my-4">
         <h3 class="text-2xl font-marker">Bonesaw is ready!</h3>
         <a href="/"
-            class="ml-4 bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-full h-8 w-8 flex items-center justify-center font-marker hover:text-black">X</a>
+            class="ml-5 bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-full h-8 w-8 flex items-center justify-center font-marker hover:text-black">X</a>
     </div>
     {{#each paragraphs}}
-    <p class="my-2 max-w-lg tracking-normal leading-normal">{{paragraph}}</p>
+    <p class="my-2 max-w-xl tracking-wide leading-relaxed">{{paragraph}}</p>
     {{/each}}
 </div>
