--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center py-4 px-8 tracking-wider">
+<header class="flex justify-between items-center py-4 px-8 tracking-widest">
     <div class="flex">
         <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
             src="/images/machoman-vanorton-childhoodmemoriesicons-behance.png"
