stylistic changes. add title to link

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -9,7 +9,8 @@
             <h2 class="my-1.5 text-3xl text-purple-500">Ohhhh yeeeeah!!!</h2>
         </div>
     </div>
-    <a href="https://github.com/jpottruff/savage-ipsum" target="_blank">
+    <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
+        class="mr-4">
         <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="github-img">
     </a>
 </header>
