--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,7 +1,7 @@
 <div class="result flex flex-col items-center py-2 px-10 tracking-wide leading-relaxed">
     <div class="flex items-center my-4">
         <h3 class="text-2xl font-marker">Bonesaw is ready!</h3>
-        <a href="/"
+        <a href="/" title="Clear it"
             class="ml-5 bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 rounded-full h-8 w-8 flex items-center justify-center font-marker hover:text-black">X</a>
     </div>
     {{#each paragraphs}}
