MODIFY header - responsive styles start (WIP)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11474,6 +11474,34 @@ video {
   height: 100vh;
 }
 
+.h-24px {
+  height: 24px;
+}
+
+.h-36px {
+  height: 36px;
+}
+
+.h-48px {
+  height: 48px;
+}
+
+.h-75px {
+  height: 75px;
+}
+
+.h-84px {
+  height: 84px;
+}
+
+.h-96px {
+  height: 96px;
+}
+
+.h-125px {
+  height: 125px;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -27093,6 +27121,34 @@ video {
   width: max-content;
 }
 
+.w-24px {
+  width: 24px;
+}
+
+.w-36px {
+  width: 36px;
+}
+
+.w-48px {
+  width: 48px;
+}
+
+.w-75px {
+  width: 75px;
+}
+
+.w-84px {
+  width: 84px;
+}
+
+.w-96px {
+  width: 96px;
+}
+
+.w-125px {
+  width: 125px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -31173,11 +31229,6 @@ video {
 .animate-bounce {
   -webkit-animation: bounce 1s infinite;
           animation: bounce 1s infinite;
-}
-
-.logo {
-  height: 125px;
-  width: 125px;
 }
 
 .github-img {
@@ -42165,6 +42216,34 @@ input[type='number'] {
 
   .sm\:h-screen {
     height: 100vh;
+  }
+
+  .sm\:h-24px {
+    height: 24px;
+  }
+
+  .sm\:h-36px {
+    height: 36px;
+  }
+
+  .sm\:h-48px {
+    height: 48px;
+  }
+
+  .sm\:h-75px {
+    height: 75px;
+  }
+
+  .sm\:h-84px {
+    height: 84px;
+  }
+
+  .sm\:h-96px {
+    height: 96px;
+  }
+
+  .sm\:h-125px {
+    height: 125px;
   }
 
   .sm\:text-xs {
@@ -57773,6 +57852,34 @@ input[type='number'] {
     width: max-content;
   }
 
+  .sm\:w-24px {
+    width: 24px;
+  }
+
+  .sm\:w-36px {
+    width: 36px;
+  }
+
+  .sm\:w-48px {
+    width: 48px;
+  }
+
+  .sm\:w-75px {
+    width: 75px;
+  }
+
+  .sm\:w-84px {
+    width: 84px;
+  }
+
+  .sm\:w-96px {
+    width: 96px;
+  }
+
+  .sm\:w-125px {
+    width: 125px;
+  }
+
   .sm\:z-0 {
     z-index: 0;
   }
@@ -72717,6 +72824,34 @@ input[type='number'] {
 
   .md\:h-screen {
     height: 100vh;
+  }
+
+  .md\:h-24px {
+    height: 24px;
+  }
+
+  .md\:h-36px {
+    height: 36px;
+  }
+
+  .md\:h-48px {
+    height: 48px;
+  }
+
+  .md\:h-75px {
+    height: 75px;
+  }
+
+  .md\:h-84px {
+    height: 84px;
+  }
+
+  .md\:h-96px {
+    height: 96px;
+  }
+
+  .md\:h-125px {
+    height: 125px;
   }
 
   .md\:text-xs {
@@ -88325,6 +88460,34 @@ input[type='number'] {
     width: max-content;
   }
 
+  .md\:w-24px {
+    width: 24px;
+  }
+
+  .md\:w-36px {
+    width: 36px;
+  }
+
+  .md\:w-48px {
+    width: 48px;
+  }
+
+  .md\:w-75px {
+    width: 75px;
+  }
+
+  .md\:w-84px {
+    width: 84px;
+  }
+
+  .md\:w-96px {
+    width: 96px;
+  }
+
+  .md\:w-125px {
+    width: 125px;
+  }
+
   .md\:z-0 {
     z-index: 0;
   }
@@ -103269,6 +103432,34 @@ input[type='number'] {
 
   .lg\:h-screen {
     height: 100vh;
+  }
+
+  .lg\:h-24px {
+    height: 24px;
+  }
+
+  .lg\:h-36px {
+    height: 36px;
+  }
+
+  .lg\:h-48px {
+    height: 48px;
+  }
+
+  .lg\:h-75px {
+    height: 75px;
+  }
+
+  .lg\:h-84px {
+    height: 84px;
+  }
+
+  .lg\:h-96px {
+    height: 96px;
+  }
+
+  .lg\:h-125px {
+    height: 125px;
   }
 
   .lg\:text-xs {
@@ -118877,6 +119068,34 @@ input[type='number'] {
     width: max-content;
   }
 
+  .lg\:w-24px {
+    width: 24px;
+  }
+
+  .lg\:w-36px {
+    width: 36px;
+  }
+
+  .lg\:w-48px {
+    width: 48px;
+  }
+
+  .lg\:w-75px {
+    width: 75px;
+  }
+
+  .lg\:w-84px {
+    width: 84px;
+  }
+
+  .lg\:w-96px {
+    width: 96px;
+  }
+
+  .lg\:w-125px {
+    width: 125px;
+  }
+
   .lg\:z-0 {
     z-index: 0;
   }
@@ -133821,6 +134040,34 @@ input[type='number'] {
 
   .xl\:h-screen {
     height: 100vh;
+  }
+
+  .xl\:h-24px {
+    height: 24px;
+  }
+
+  .xl\:h-36px {
+    height: 36px;
+  }
+
+  .xl\:h-48px {
+    height: 48px;
+  }
+
+  .xl\:h-75px {
+    height: 75px;
+  }
+
+  .xl\:h-84px {
+    height: 84px;
+  }
+
+  .xl\:h-96px {
+    height: 96px;
+  }
+
+  .xl\:h-125px {
+    height: 125px;
   }
 
   .xl\:text-xs {
@@ -149429,6 +149676,34 @@ input[type='number'] {
     width: max-content;
   }
 
+  .xl\:w-24px {
+    width: 24px;
+  }
+
+  .xl\:w-36px {
+    width: 36px;
+  }
+
+  .xl\:w-48px {
+    width: 48px;
+  }
+
+  .xl\:w-75px {
+    width: 75px;
+  }
+
+  .xl\:w-84px {
+    width: 84px;
+  }
+
+  .xl\:w-96px {
+    width: 96px;
+  }
+
+  .xl\:w-125px {
+    width: 125px;
+  }
+
   .xl\:z-0 {
     z-index: 0;
   }
@@ -164373,6 +164648,34 @@ input[type='number'] {
 
   .\32xl\:h-screen {
     height: 100vh;
+  }
+
+  .\32xl\:h-24px {
+    height: 24px;
+  }
+
+  .\32xl\:h-36px {
+    height: 36px;
+  }
+
+  .\32xl\:h-48px {
+    height: 48px;
+  }
+
+  .\32xl\:h-75px {
+    height: 75px;
+  }
+
+  .\32xl\:h-84px {
+    height: 84px;
+  }
+
+  .\32xl\:h-96px {
+    height: 96px;
+  }
+
+  .\32xl\:h-125px {
+    height: 125px;
   }
 
   .\32xl\:text-xs {
@@ -179979,6 +180282,34 @@ input[type='number'] {
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
+  }
+
+  .\32xl\:w-24px {
+    width: 24px;
+  }
+
+  .\32xl\:w-36px {
+    width: 36px;
+  }
+
+  .\32xl\:w-48px {
+    width: 48px;
+  }
+
+  .\32xl\:w-75px {
+    width: 75px;
+  }
+
+  .\32xl\:w-84px {
+    width: 84px;
+  }
+
+  .\32xl\:w-96px {
+    width: 96px;
+  }
+
+  .\32xl\:w-125px {
+    width: 125px;
   }
 
   .\32xl\:z-0 {
