--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,16 +1,22 @@
-<header class="flex justify-between items-center py-4 px-8 tracking-widest">
-    <div class="flex">
+<header class="flex flex-col sm:flex-row justify-between items-center py-2 px-2 border-blue-500 border-2">
+
+    <div class="flex border-red-500 border-2">
+        {{!-- Image --}}
         <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
             src="/images/machoman-vanorton-childhoodmemoriesicons-behance.png"
             title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
-            class="logo" />
-        <div class="ml-4 flex flex-col justify-center font-marker">
-            <h1 class="my-1 text-5xl text-pink-500">Savage Ipsum</h1>
-            <h2 class="my-1.5 text-3xl text-purple-500">Ohhhh yeeeeah!!!</h2>
+            class="w-84px h-84px sm:w-125px sm:h-125px border-red-500 border-2" />
+        {{!-- Text --}}
+        <div class="flex flex-col justify-center ml-2 font-marker tracking-widest border-red-500 border-2">
+            <h1 class="text-3xl text-pink-500 border-blue-500 border-2">Savage Ipsum</h1>
+            <h2 class="text-xl text-purple-500 border-blue-500 border-2">Ohhhh yeeeeah!!!</h2>
         </div>
     </div>
-    <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
-        class="mr-4">
-        <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="github-img">
-    </a>
+
+    <div class="flex border-red-500 border-2">
+        <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
+            {{!-- class="mr-4 border-red-500 border-2"> --}} class="border-red-500 border-2">
+            <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="w-36px h-36px">
+        </a>
+    </div>
 </header>
