--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,20 +1,20 @@
-<header class="flex flex-row justify-between items-center px-1 border-blue-500 border-2">
-    <div class="flex flex-row items-center border-red-500 border-2">
+<header class="flex flex-row justify-between items-center px-1 py-1 sm:px-4 sm:py-2 border-blue-500 border-2">
+    <div class="flex flex-row items-center">
         {{!-- Image --}}
         <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
             src="/images/machoman-vanorton-childhoodmemoriesicons-behance.png"
             title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
-            class="w-75px h-75px sm:w-125px sm:h-125px border-red-500 border-2" />
+            class="w-75px h-75px sm:w-125px sm:h-125px" />
         {{!-- Text --}}
-        <div class="flex flex-col ml-1 justify-center font-marker tracking-widest border-red-500 border-2">
-            <h1 class="text-3xl text-pink-500">Savage Ipsum</h1>
-            <h2 class="text-xl text-purple-500">Ohhhh yeeeeah!!!</h2>
+        <div class="flex flex-col ml-1 justify-center font-marker tracking-widest">
+            <h1 class="text-3xl sm:text-5xl sm:my-0.5 text-pink-500">Savage Ipsum</h1>
+            <h2 class="text-xl sm:text-2xl sm:my-0.5 text-purple-500">Ohhhh yeeeeah!!!</h2>
         </div>
     </div>
 
 
     <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
-        class="border-red-500 border-2">
-        <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="w-32px h-32px">
+        class="sm:mr-2">
+        <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="w-32px h-32px sm:w-36px sm:h-36px">
     </a>
 </header>
