REMOVE tailwind class from header

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,4 @@
-<header class="flex flex-row justify-between items-center px-1 py-1 sm:px-4 sm:py-2 border-blue-500 border-2">
+<header class="flex flex-row justify-between items-center px-1 py-1 sm:px-4 sm:py-2">
     <div class="flex flex-row items-center">
         {{!-- Image --}}
         <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
@@ -14,7 +14,7 @@
 
 
     <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
-        class="sm:mr-2">
+        class="mr-2">
         <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="w-32px h-32px sm:w-36px sm:h-36px">
     </a>
 </header>
