FIX accessibility issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <form action="/api/generate" class="flex flex-col items-center py-4 tracking-wide leading-relaxed">
     <div class="flex-initial my-4">
         <label for="paragraphs" class="text-l sm:text-xl">Paragraphs:</label>
-        <input name="paragraphs" type="number" min="1" max="25" placeholder="1-25"
+        <input id="paragraphs" name="paragraphs" type="number" min="1" max="25" placeholder="1-25"
             class="text-black ml-4 pl-4 pr-1 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 focus:border-transparent">
     </div>
     <div class="flex-initial my-4">
