FIX best practices issue in link

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -14,7 +14,7 @@
 
 
     <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
-        class="mr-2">
+        rel="noopener noreferrer" class="mr-2">
         <img src="/images/github/GitHub-Mark-Light-64px.png" alt="github" class="w-32px h-32px sm:w-36px sm:h-36px">
     </a>
 </header>
