--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Lorem Ipsum / dummy text generator inspired by the Cream of the Crop: Macho Man Randy Savage. Ohhhhh yeahhhh!">
+    <meta name="keywords"
+        content="Lorem Ipsum, Lorem Ipsum Generator, Wrestling, WWF, WWE, Macho Man, Randy Savage, Ohhhh yeeeeah">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <link href="/css/style.css" rel="stylesheet">
