--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,10 +1,12 @@
 <div class="flex flex-col items-center py-2 px-6 tracking-wide leading-relaxed">
     <div class="flex items-center my-4">
-        <h3 class="text-xl sm:text-2xl font-marker">Bonesaw is ready!</h3>
+        <h3 class="text-xl sm:text-2xl font-marker">{{pageData.readyText}}</h3>
         <a href="/" title="Clear it"
             class="ml-4 rounded-full h-7 w-7 sm:h-8 sm:w-8 flex items-center justify-center font-marker bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 hover:text-black">X</a>
     </div>
-    {{#each paragraphs}}
-    <p class="my-2 max-w-prose text-justify">{{paragraph}}</p>
+    {{#each pageData.paragraphs}}
+    <p class="my-2 max-w-prose text-justify">
+        {{text}}
+    </p>
     {{/each}}
 </div>
