--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,12 +1,22 @@
 <div class="flex flex-col items-center py-2 px-6 tracking-wide leading-relaxed">
+
     <div class="flex items-center my-4">
         <h3 class="text-xl sm:text-2xl font-marker">{{pageData.readyText}}</h3>
         <a href="/" title="Clear it"
             class="ml-4 rounded-full h-7 w-7 sm:h-8 sm:w-8 flex items-center justify-center font-marker bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 hover:text-black">X</a>
     </div>
+
+    <button type="button"
+        class="bg-gray-900 mt-2 mb-4 py-1 px-4 rounded border border-dotted border-white font-marker tracking-wider hover:bg-gray-800">
+        <span class="bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 bg-clip-text text-transparent">
+            Copy to Clipboard
+        </span>
+    </button>
+
     {{#each pageData.paragraphs}}
     <p class="my-2 max-w-prose text-justify">
         {{text}}
     </p>
     {{/each}}
+
 </div>
