--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -7,7 +7,7 @@
     </div>
 
     <button type="button"
-        class="bg-gray-900 mt-2 mb-4 py-1 px-4 rounded border border-dotted border-white font-marker tracking-wider hover:bg-gray-800">
+        class="bg-gray-900 mt-2 mb-4 py-1 px-4 rounded border border-dotted border-pink-500 font-marker tracking-wider hover:bg-gray-800">
         <span class="bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 bg-clip-text text-transparent">
             Copy to Clipboard
         </span>
