Finish copy to clipboard functionality

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -6,7 +6,7 @@
             class="ml-4 rounded-full h-7 w-7 sm:h-8 sm:w-8 flex items-center justify-center font-marker bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 hover:text-black">X</a>
     </div>
 
-    <button type="button"
+    <button type="button" onclick="copyToClipboard()"
         class="bg-gray-900 mt-2 mb-4 py-1 px-4 rounded border border-dotted border-pink-500 font-marker tracking-wider hover:bg-gray-800">
         <span class="bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 bg-clip-text text-transparent">
             Copy to Clipboard
@@ -19,4 +19,5 @@
     </p>
     {{/each}}
 
+    <script type="text/javascript" src="/js/script.js"></script>
 </div>
