FIX favicon path

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="Lorem Ipsum, Lorem Ipsum Generator, Wrestling, WWF, WWE, Macho Man, Randy Savage, Ohhhh yeeeeah">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
     <link href="/css/style.css" rel="stylesheet">
     <title>Savage Ipsum</title>
     {{!-- Google Fonts --}}
