--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <header class="flex flex-row justify-between items-center px-1 py-1 sm:px-4 sm:py-2">
-    <div class="flex flex-row items-center">
+    <a href="/" class="flex flex-row items-center">
         {{!-- Image --}}
         <img title="&quot;Macho Man&quot; by [Van Orton Design(https://vanortondesign.com/iconscollection)(https://www.behance.net/gallery/26326517/Icons)] is licensed under [CC BY 2.0](https://creativecommons.org/licenses/by/2.0/)], via Behance"
             src="/img/machoman-vanorton-childhoodmemoriesicons-behance.png"
@@ -10,7 +10,7 @@
             <h1 class="text-3xl sm:text-5xl sm:my-0.5 text-pink-500">Savage Ipsum</h1>
             <h2 class="text-xl sm:text-3xl sm:my-0.5 text-purple-500">Ohhhh yeeeeah!!!</h2>
         </div>
-    </div>
+    </a>
 
 
     <a title="Visit the project on Github" href="https://github.com/jpottruff/savage-ipsum" target="_blank"
