FIX accessibility issue - add main tag

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -20,7 +20,9 @@
 
 <body class="min-h-screen w-screen box-border overflow-x-hidden bg-black text-white font-sans-alt">
     {{>header}}
-    {{{body}}}
+    <main>
+        {{{body}}}
+    </main>
 </body>
 
 </html>
