ADD site preview image. UPDATE meta

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,11 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
+    {{!-- Primary Meta --}}
+    <meta name="title" content="Savage Ipsum">
     <meta name="description"
         content="Lorem Ipsum / dummy text generator inspired by the Cream of the Crop: Macho Man Randy Savage. Ohhhhh yeahhhh!">
     <meta name="keywords"
         content="Lorem Ipsum, Lorem Ipsum Generator, Wrestling, WWF, WWE, Macho Man, Randy Savage, Ohhhh yeeeeah">
+    {{!-- Open Graph / Facebook Meta --}}
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://savageipsum.herokuapp.com/">
+    <meta property="og:title" content="Savage Ipsum">
+    <meta property="og:description"
+        content="Lorem Ipsum / dummy text generator inspired by the Cream of the Crop: Macho Man Randy Savage. Ohhhhh yeahhhh!">
+    <meta property="og:image" content="/img/site-preview/site-preview-1200x628.png">
+    {{!-- Twitter Meta --}}
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://savageipsum.herokuapp.com/">
+    <meta property="twitter:title" content="Savage Ipsum">
+    <meta property="twitter:description"
+        content="Lorem Ipsum / dummy text generator inspired by the Cream of the Crop: Macho Man Randy Savage. Ohhhhh yeahhhh!">
+    <meta property="twitter:image" content="/img/site-preview/site-preview-1200x628.png">
+    {{!-- Viewport Meta --}}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
     <link href="/css/style.css" rel="stylesheet">
     <title>Savage Ipsum</title>
